# DannyRender

./: .gitignore  CMakeLists.txt  README.md  run.sh
3rd/: OBJ_Loader.hpp
scenes/: Cloth1.xml  Cloth2.xml  Cloth3.xml  Cloth4.xml  Cloth5.xml  Cloth6.xml  CornellBox.xml  CornellBoxSphere.xml  MitsubaKnob.xml  MoriKnob.xml  test.xml
src/: main.cpp
src/core/: Camera.cpp  Camera.h  CoordinateSpace.cpp  CoordinateSpace.h  Discrete1dSampler.cpp  Discrete1dSampler.h  Image.cpp  Image.h  Math.hpp  Output.cpp  Output.h  PinholeCamera.cpp  PinholeCamera.h  Render.cpp  Render.hpp  Sampler.cpp  Sampler.hpp  Scene.cpp  Scene.h  Timer.cpp  Timer.h  Tonemapper.cpp  Tonemapper.h  forward_decl.h
src/geometry/: BBox.cpp  BBox.hpp  BVH.h  BVH.inl  Intersection.hpp  Mapper.cpp  Mapper.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  Ray.hpp  Sphere.cpp  Sphere.hpp  SphericalCoordination.cpp  SphericalCoordination.hpp  Transformation.cpp  Transformation.hpp  Triangle.cpp  Triangle.hpp
src/integrator/: Integrator.cpp  Integrator.h  Pathtracer.cpp  Pathtracer.h
src/light/: DiffuseArealight.cpp  DiffuseArealight.h  Light.cpp  Light.h
src/material/: BsdfMaterial.cpp  BsdfMaterial.hpp  Cloth.cpp  Cloth.h  Diffuse.cpp  Diffuse.hpp  KullaContyMetal.cpp  KullaContyMetal.h  Metal.cpp  Metal.h
src/microfacet/: Fresnel.cpp  Fresnel.h  GGXDistribution.cpp  GGXDistribution.h  KullaContyReflection.cpp  KullaContyReflection.h  MicrocylinderCloth.cpp  MicrocylinderCloth.h  Microfacet.h  MicrofacetReflection.cpp  MicrofacetReflection.h  MicrofacetReflection.inl
src/texture/: ConstantTexture.cpp  ConstantTexture.h  ContantTexture.cpp  ImageTexture.cpp  ImageTexture.h  IntervalTexture.cpp  IntervalTexture.h  Texture.cpp  Texture.h
src/utils/: Global.hpp  Parser.cpp  Parser.h
src/xml/: Node.cpp  Node.h  Parser.cpp  Parser.h  node.inl
